==> MikroElektronika/core_packages/ARM/mikroC/system/TI/M4/src/__Lib_System_TIVA.c <==
#include "stdint.h"

void NVIC_IntEnable( const unsigned long ivt )
{
    unsigned long * ptr;

    // Determine the interrupt to enable.
    if ( ivt == IVT_FAULT_MPU ) {
        // Enable the MemManage interrupt.
        NVIC_SYS_HND_CTRL |= NVIC_SYS_HND_CTRL_MEM;
    } else if ( ivt == IVT_FAULT_BUS ) {
        // Enable the bus fault interrupt.
        NVIC_SYS_HND_CTRL |= NVIC_SYS_HND_CTRL_BUS;
    } else if ( ivt == IVT_FAULT_USAGE ) {
        // Enable the usage fault interrupt.
        NVIC_SYS_HND_CTRL |= NVIC_SYS_HND_CTRL_USAGE;
    } else if ( ivt == IVT_FAULT_SYSTICK ) {
        // Enable the System Tick interrupt.
        NVIC_ST_CTRL |= NVIC_ST_CTRL_INTEN;
    } else if ( ivt >= 16 ) {
        // Enable the general interrupt.
        ptr  = &NVIC_EN0 + ( ivt - 16 ) / 32;
        *ptr = 1ul << ( ( ivt - 16 ) & 0x1F );
    }
}

void NVIC_IntDisable( const unsigned long ivt )
{
    unsigned long * ptr;

    // Determine the interrupt to disable.
    if ( ivt == IVT_FAULT_MPU ) {
        // Disable the MemManage interrupt.
        NVIC_SYS_HND_CTRL &= ~( NVIC_SYS_HND_CTRL_MEM );
    } else if ( ivt == IVT_FAULT_BUS ) {
        // Disable the bus fault interrupt.
        NVIC_SYS_HND_CTRL &= ~( NVIC_SYS_HND_CTRL_BUS );
    } else if ( ivt == IVT_FAULT_USAGE ) {
        // Disable the usage fault interrupt.
        NVIC_SYS_HND_CTRL &= ~( NVIC_SYS_HND_CTRL_USAGE );
    } else if ( ivt == IVT_FAULT_SYSTICK ) {
        // Disable the System Tick interrupt.
        NVIC_ST_CTRL &= ~( NVIC_ST_CTRL_INTEN );
    } else if ( ivt >= 16 ) {
        // Disable the general interrupt.
        ptr  = &NVIC_DIS0 + ( ivt - 16 ) / 32;
        *ptr = 1ul << ( ( ivt - 16 ) & 0x1F );
    }
}

void NVIC_SetIntPriority( uint8_t ivt, uint8_t priority )
{
    uint32_t * p;
    uint8_t    shift;

    if ( ivt > 15 ) {
        p     = &NVIC_PRI0 + ( ( ivt - 16 ) >> 2 ); // >> 2; four vectors per register.
        shift = ( ( ( ivt - 16 ) % 4 ) << 3 ) + 5;  // +5 for high nibble.
    } else if ( ( ivt > 3 ) & ( ivt <= 15 ) ) {
        p     = &NVIC_SYS_PRI1 + ( ivt / 4 ) - 1;
        shift = ( ( ivt % 4 ) << 3 ) + 5;
    } else {
        return;
    }

    if ( priority & 0x0F ) {                         // priority check.
        *p &= ~( ( uint32_t )0xF << shift );         // clear old value.
        *p |= ( uint32_t )priority << shift;         // write to high nibble byte.
    } else {                                         // In case the priority value is sent in high nibble format for IVT_IP0.
        *p &= ~( ( uint32_t )0xF << shift );         // clear old value.
        *p |= ( uint32_t )priority << ( shift - 5 ); // write to high nibble byte.
    }
}

void SystemReset( void )
{
    // Perform a software reset request. This will cause the device to reset,
    // no further code is executed.
    NVIC_APINT = 0x05FA0000 | ( 1ul << NVIC_APINT_SYSRESETREQ );
    // The device should have reset, so this should never be reached.  Just in
    // case, loop forever.
    while ( 1 ) {
    }
}

static void InitialSetUpRCCRCC2()
{
    unsigned long volatile ulRSCLKCFG, ulMOSCCTL, ulPLLFREQ0, ulPLLFREQ1;
    volatile unsigned long Fosc_kHz;

    ulRSCLKCFG = 12345678;
    ulMOSCCTL  = 12345679;
    ulPLLFREQ0 = 12345680;
    ulPLLFREQ1 = 12345681;
    Fosc_kHz   = 12345677;

    // back to internal osc before new configuration is applied.
    SYSCTL_MEMTIM0  = 0x00300030;
    SYSCTL_RSCLKCFG = 0x00000000;

    // start new osc configuration.
    SYSCTL_MOSCCTL = ulMOSCCTL & ~( 1ul << SYSCTL_MOSCCTL_CVAL ); // do not enable clock validator until main osc stabilization time has passed.
    if ( !ulMOSCCTL.SYSCTL_MOSCCTL_PWRDN ) {
        // wait for the main oscillator to stabilize, max 18ms according to data sheet.
        Delay_10ms();
        Delay_10ms();
    }
    if ( ulMOSCCTL.SYSCTL_MOSCCTL_CVAL ) // when main clock is stable, enable validation if needed.
        SYSCTL_MOSCCTL.SYSCTL_MOSCCTL_CVAL = 1;

    if ( Fosc_kHz > 100000 )
        SYSCTL_MEMTIM0 = 0x00300196;
    else if ( Fosc_kHz > 80000 )
        SYSCTL_MEMTIM0 = 0x00300155;
    else if ( Fosc_kHz > 50000 )
        SYSCTL_MEMTIM0 = 0x003000D3;
    else if ( Fosc_kHz > 30000 )
        SYSCTL_MEMTIM0 = 0x003000B2;
    else if ( Fosc_kHz > 16000 )
        SYSCTL_MEMTIM0 = 0x00300071;
    else
        SYSCTL_MEMTIM0 = 0x00300030;

    SYSCTL_PLLFREQ0                         = ulPLLFREQ0;
    SYSCTL_PLLFREQ1                         = ulPLLFREQ1;

    SYSCTL_RSCLKCFG                         = ulRSCLKCFG & ~( 1ul << SYSCTL_RSCLKCFG_USEPLL ); // do not start PLLs yet.

    SYSCTL_RSCLKCFG.SYSCTL_RSCLKCFG_MEMTIMU = 1;                                               // update flash memory timings.
    SYSCTL_RSCLKCFG.SYSCTL_RSCLKCFG_NEWFREQ = 1;                                               // update PLL VCO frequency.

    if ( ulRSCLKCFG & ( 1ul << SYSCTL_RSCLKCFG_USEPLL ) ) {                                    // if PLL1 is enabled.
        while ( SYSCTL_PLLSTAT.SYSCTL_PLLSTAT_LOCK == 0 )
            ;                                                                                  // Wait for SYSCTL_PLLSTAT_LOCK = 1 (PLL is ready).
        SYSCTL_RSCLKCFG.SYSCTL_RSCLKCFG_USEPLL = 1;                                            // Use PLL.
    }
}
