==> MikroElektronika/core_packages/ARM/mikroC/system/NXP/M4/src/__Lib_System.c <==
#include "stdint.h"
#include "SIM_typedef.h"
#define __IO
#define __I
#define SCS_BASE            (0xE000E000UL)                            //!< System Control Space Base Address  //
#define ITM_BASE            (0xE0000000UL)                            //!< ITM Base Address                   //
#define DWT_BASE            (0xE0001000UL)                            //!< DWT Base Address                   //
#define TPI_BASE            (0xE0040000UL)                            //!< TPI Base Address                   //
#define CoreDebug_BASE      (0xE000EDF0UL)                            //!< Core Debug Base Address            //
#define SysTick_BASE        (SCS_BASE +  0x0010UL)                    //!< SysTick Base Address               //
#define NVIC_BASE           (SCS_BASE +  0x0100UL)                    //!< NVIC Base Address                  //
#define SCB_BASE            (SCS_BASE +  0x0D00UL)                    //!< System Control Block Base Address  //
#define SCnSCB              ((SCnSCB_Type    *)     SCS_BASE      )   //!< System control Register not in SCB //
#define SCB                 ((SCB_Type       *)     SCB_BASE      )   //!< SCB configuration struct           //
#define WDOG_STCTRLH_REG(base)                   ((base)->STCTRLH)
#define WDOG_STCTRLL_REG(base)                   ((base)->STCTRLL)
#define WDOG_TOVALH_REG(base)                    ((base)->TOVALH)
#define WDOG_TOVALL_REG(base)                    ((base)->TOVALL)

void NVIC_IntEnable(const uint32_t ivt)
{
    uint32_t *ptr;

    //
    // Check the arguments.
    //
    // ASSERT(ulInterrupt < NUM_INTERRUPTS);

    //
    // Determine the interrupt to enable.
    //
    if (ivt == IVT_INT_Mem_Manage_Fault)
    {
        //
        // Enable the MemManage interrupt.
        //
        SCB_SHCRS |= 1ul << MEMFAULTENA;
    }
    else if (ivt == IVT_INT_Bus_Fault)
    {
        //
        // Enable the bus fault interrupt.
        //
        SCB_SHCRS |= 1ul << BUSFAULTENA;
    }
    else if (ivt == IVT_INT_Usage_Fault)
    {
        //
        // Enable the usage fault interrupt.
        //
        SCB_SHCRS |= 1ul << USGFAULTENA;
    }
    else if (ivt == IVT_INT_SysTick)
    {
        //
        // Enable the System Tick interrupt.
        //
        STK_CTRL |= 1ul << TICKINT;
    }
    else if (ivt >= 16)
    {
        //
        // Enable the general interrupt.
        //
        ptr  = &NVIC_ISER0 + (ivt - 16) / 32;
        *ptr = 1ul << ((ivt - 16) & 0x1F);
    }

}

void NVIC_SetIntPriority(uint8_t ivt, uint8_t priority) {
    uint32_t *p;
    uint8_t shift;

  if (ivt > 15) {
    p = &NVIC_IPR0 + ((ivt - 16) >> 2);                   // >> 2; cetiri vektora po registru
    shift = (((ivt - 16) % 4) << 3) + 4;                 // +4 for hi nibble
    }
    else if((ivt > 3)&(ivt <= 15))
    {
        p = &SCB_SHPR1 + (ivt / 4) - 1;
        shift = ((ivt % 4) << 3) + 4;
    }
	else
	{
		return;
	}

    if (priority & 0x0F)
    {                               // provera prioriteta
        *p &= ~((uint32_t)0xF << shift);                             // brisanje stare vrednosti
            *p |= (uint32_t)priority << shift;            // upis u visi nibl bajta
        }
    else
    { // U slucaju da je priority vrednost poslata u hi nibble zapisu i za IVT_IP0
        *p &= ~((uint32_t)0xF << shift);                             // brisanje stare vrednosti
            *p |= (uint32_t) priority << (shift - 4);     // upis u hi nibble bajta
  }
}

void NVIC_IntDisable(const uint32_t ivt)
{
    uint32_t *ptr;

    //
    // Check the arguments.
    //
    // ASSERT(ulInterrupt < NUM_INTERRUPTS);

    //
    // Determine the interrupt to disable.
    //
    if (ivt == IVT_INT_Mem_Manage_Fault)
    {
        //
        // Disable the MemManage interrupt.
        //
        SCB_SHCRS &= ~(1ul << MEMFAULTENA);
    }
    else if (ivt == IVT_INT_Bus_Fault)
    {
        //
        // Disable the bus fault interrupt.
        //
        SCB_SHCRS &= ~(1ul << BUSFAULTENA);
    }
    else if (ivt == IVT_INT_Usage_Fault)
    {
        //
        // Disable the usage fault interrupt.
        //
        SCB_SHCRS &= ~(1ul << USGFAULTENA);
    }
    else if (ivt == IVT_INT_SysTick)
    {
        //
        // Disable the System Tick interrupt.
        //
        STK_CTRL &= ~(1ul << TICKINT);
    }
    else if (ivt >= 16)
    {
        //
        // Disable the general interrupt.
        //
        ptr  = &NVIC_ICER0 + (ivt - 16) / 32;
        *ptr = 1ul << ((ivt - 16) & 0x1F);
    }
}

void SystemReset(void)
{
    //
    // Perform a software reset request.  This will cause the device to reset,
    // no further code is executed.
    //
    SCB_AIRCR = 0x05FA0000 | (1ul << SYSRESETREQ);
    //
    // The device should have reset, so this should never be reached.  Just in
    // case, loop forever.
    //
    while(1)
    {
    }
}

static void InitialSetUpRCCRCC2(){
    volatile uint32_t ulOSC_CR, ulSIM_SOPT1, ulSIM_SOPT2, ulSIM_CLKDIV1, ulMCG_C1, ulMCG_C2, ulMCG_C4, ulMCG_C5, ulMCG_C6,
                ulMCG_SC, ulMCG_C7, ulSIM_CLKDIV2, ulWDOG_STCTRLH, ulMCG_MODE;
    volatile uint32_t Fosc_kHz;
    uint32_t mcg_mode;

  // disable interrupts
  asm CPSID I;
  // fetch values from edit project
  ulOSC_CR       = 12345678;
  ulSIM_SOPT1    = 12345679;
  ulSIM_SOPT2    = 12345680;
  ulSIM_CLKDIV1  = 12345681;
  ulMCG_C1       = 12345682;
  ulMCG_C2       = 12345683;
  ulMCG_C4       = 12345684;
  ulMCG_C5       = 12345685;
  ulMCG_C6       = 12345686;
  ulMCG_SC       = 12345687;
  ulMCG_C7       = 12345688;
  ulSIM_CLKDIV2  = 12345689;
  ulWDOG_STCTRLH = 12345690;
  ulMCG_MODE     = 12345691;

  Fosc_kHz       = 12345677;

  mcg_mode       = ulMCG_MODE & 0x7;

  // disable watchdog?
  if ((ulWDOG_STCTRLH & WDOG_STCTRLH_WDOGEN_MASK) == 0) {
    // first we need to unlock wdog registers
    // WDOG->UNLOCK: WDOGUNLOCK=0xC520 //
    WDOG->UNLOCK = WDOG_UNLOCK_WDOGUNLOCK(0xC520); // Key 1 //
    // WDOG->UNLOCK: WDOGUNLOCK=0xD928 //
    WDOG->UNLOCK = WDOG_UNLOCK_WDOGUNLOCK(0xD928); // Key 2 //
    // WDOG->STCTRLH: ?=0,DISTESTWDOG=0,BYTESEL=0,TESTSEL=0,TESTWDOG=0,?=0,?=1,WAITEN=1,STOPEN=1,DBGEN=0,ALLOWUPDATE=1,WINEN=0,IRQRSTEN=0,CLKSRC=1,WDOGEN=0 //
    WDOG->STCTRLH = WDOG_STCTRLH_BYTESEL(0x00) |
                    WDOG_STCTRLH_WAITEN_MASK |
                    WDOG_STCTRLH_STOPEN_MASK |
                    WDOG_STCTRLH_ALLOWUPDATE_MASK |
                    WDOG_STCTRLH_CLKSRC_MASK |
                        0x0100ul;
  }
  // set offset for vector table
    // SCB->VTOR = 0;

  if((RCM->SRS0 & RCM_SRS0_WAKEUP_MASK) != 0x00)
  {
    if((PMC->REGSC & PMC_REGSC_ACKISO_MASK) != 0x00)
    {
       PMC->REGSC |= PMC_REGSC_ACKISO_MASK; // Release hold with ACKISO:  Only has an effect if recovering from VLLSx.//
    }
    }
    else if ((ulMCG_C2 & MCG_C2_FCFTRIM_MASK) != 0x00)  // Ispitujemo da li imamo napajanje na Vbat pinu (SWRELARM-385)
    {
    SIM_SCGC6 |= SIM_SCGC6_RTC_MASK;
        if ((RTC_CR & RTC_CR_OSCE_MASK) == 0x00)
        { // Only if the OSCILLATOR is not already enabled //
            RTC_CR = (uint32_t)((RTC_CR & (uint32_t)~(uint32_t)(RTC_CR_SC2P_MASK | RTC_CR_SC4P_MASK | RTC_CR_SC8P_MASK | RTC_CR_SC16P_MASK)) | (uint32_t)SYSTEM_RTC_CR_VALUE);
            RTC_CR |= (uint32_t)RTC_CR_OSCE_MASK;
            RTC_CR &= (uint32_t)~(uint32_t)RTC_CR_CLKO_MASK;
    }
  }

  // Power mode protection initialization //
  SMC_PMPROT = SYSTEM_SMC_PMPROT_VALUE; // Enable all modes; mcu familly dependant
  // K64 code
  if ((ulMCG_MODE & 0x10) == 0) {
    // za K64 nemamo HSRUN, set default RUN mode
    SMC_PMCTRL &= ~SMC_PMCTRL_RUNM_MASK; // clear [5:6] bits, set RUN mode as default
    // wait for run mode
    while(SMC_PMSTAT != 0x01);
  } else if((ulMCG_MODE & 0x10)) {
    // provera freq. ako je freq>80MHz idemo u HSRUN, u suprotnom RUN mode
    if (Fosc_kHz > 80000) {
      // kod K22 imamo HSRUN
      SMC_PMCTRL = SMC_PMCTRL_RUNM_MASK;
      // wait for hsrun mode
      while(SMC_PMSTAT != 0x80);
    } else {
      SMC_PMCTRL &= ~SMC_PMCTRL_RUNM_MASK;
      while(SMC_PMSTAT != 0x01);
    }
  }
  // set prescalers
  SIM_CLKDIV1 = ulSIM_CLKDIV1;
  // Set 32 kHz clock source (ERCLK32K)
  SIM_SOPT1   = ((SIM_SOPT1 & (uint32_t)(~SIM_SOPT1_OSC32KSEL_MASK)) | (ulSIM_SOPT1 & SIM_SOPT1_OSC32KSEL_MASK));
  // Selects the high frequency clock for various peripheral clocking options
  // Select USB clock source.
  // 0 - External bypass clock (USB_CLKIN).
  // 1 - MCGFLLCLK, or MCGPLLCLK, or IRC48M clock as selected by SOPT2[PLLFLLSEL], and then
  //     divided by the USB fractional divider as configured by SIM_CLKDIV2[USBFRAC, USBDIV].
  SIM_SOPT2 = ((SIM_SOPT2 & (uint32_t)(~(SIM_SOPT2_PLLFLLSEL_MASK | SIM_SOPT2_USBSRC_MASK))) |
               (ulSIM_SOPT2 & SIM_SOPT2_PLLFLLSEL_MASK) | (ulSIM_SOPT2 & SIM_SOPT2_USBSRC_MASK));
  // check if FEI, FBI, BLPI mode is selected
  if ((mcg_mode == MCG_MODE_FEI) || (mcg_mode == MCG_MODE_FBI) || (mcg_mode == MCG_MODE_BLPI)) {
    // Set MCG and OSC
    if (((ulOSC_CR & OSC_CR_ERCLKEN_MASK) != 0x00) || (((ulMCG_C5 & MCG_C5_PLLCLKEN0_MASK) != 0x00) && ((ulMCG_C7 & MCG_C7_OSCSEL_MASK) == 0x00))){
      // SIM_SCGC5: PORTA=1
      SIM_SCGC5 |= SIM_SCGC5_PORTA_MASK;
      // PORTA_PCR18: ISF=0,MUX=0
            PORTA_PCR18 &= (uint32_t)~(uint32_t)((PORT_PCR_ISF_MASK | PORT_PCR_MUX(0x07)));
            if ((ulMCG_C2 & MCG_C2_EREFS_MASK) != 0x00)
            {
        // PORTA_PCR19: ISF=0,MUX=0
                PORTA_PCR19 &= (uint32_t)~(uint32_t)((PORT_PCR_ISF_MASK | PORT_PCR_MUX(0x07)));
      }
    }
    MCG_SC = ulMCG_SC;       // Set SC (fast clock internal reference divider)
    MCG_C1 = ulMCG_C1;       // Set C1 (clock source selection, FLL ext. reference divider, int. reference enable etc.)
    // Check that the source of the FLL reference clock is the requested one.
    if ((ulMCG_C1 & MCG_C1_IREFS_MASK) != 0x00) {
      while((MCG_S & MCG_S_IREFST_MASK) == 0x00) {
      }
    } else {
      while((MCG_S & MCG_S_IREFST_MASK) != 0x00) {
      }
    }
        MCG_C2 = (MCG_C2 & (uint8_t)(~MCG_C2_FCFTRIM_MASK)) | (ulMCG_C2 & (uint8_t)(~MCG_C2_LP_MASK)); // Set C2 (freq. range, ext. and int. reference selection etc. excluding trim bits; low power bit is set later)
        MCG_C4 = (ulMCG_C4 & (uint8_t)(~(MCG_C4_FCTRIM_MASK | MCG_C4_SCFTRIM_MASK))) | (MCG_C4 & (MCG_C4_FCTRIM_MASK | MCG_C4_SCFTRIM_MASK)); // Set C4 (FLL output; trim values not changed)
    OSC_CR = ulOSC_CR;       // Set OSC_CR (OSCERCLK enable, oscillator capacitor load)
    MCG_C7 = ulMCG_C7;       // Set C7 (OSC Clock Select)
    if (mcg_mode == MCG_MODE_BLPI){
      // BLPI specific
      MCG_C2 |= MCG_C2_LP_MASK;         // Disable FLL and PLL in bypass mode
    }
  }else { // MCG_MODE
    // Set MCG and OSC
    if (((ulOSC_CR & OSC_CR_ERCLKEN_MASK) != 0x00) || ((ulMCG_C7 & MCG_C7_OSCSEL_MASK) == 0x00)) {
      // SIM_SCGC5: PORTA=1
      SIM_SCGC5 |= SIM_SCGC5_PORTA_MASK;
      // PORTA_PCR18: ISF=0,MUX=0
            PORTA_PCR18 &= (uint32_t)~(uint32_t)((PORT_PCR_ISF_MASK | PORT_PCR_MUX(0x07)));
            if ((ulMCG_C2 & MCG_C2_EREFS_MASK) != 0x00)
            {
      // PORTA_PCR19: ISF=0,MUX=0
                PORTA_PCR19 &= (uint32_t)~(uint32_t)((PORT_PCR_ISF_MASK | PORT_PCR_MUX(0x07)));
      }
    }
    MCG_SC = ulMCG_SC;                  // Set SC (fast clock internal reference divider)
        MCG_C2 = (MCG_C2 & (uint8_t)(~(MCG_C2_FCFTRIM_MASK))) | (ulMCG_C2 & (uint8_t)(~MCG_C2_LP_MASK)); // Set C2 (freq. range, ext. and int. reference selection etc. excluding trim bits; low power bit is set later)
    OSC_CR = ulOSC_CR;                  // Set OSC_CR (OSCERCLK enable, oscillator capacitor load)
    MCG_C7 = ulMCG_C7;                  // Set C7 (OSC Clock Select)
    if (mcg_mode == MCG_MODE_PEE)
      MCG_C1 = ulMCG_C1 | MCG_C1_CLKS(0x02); // Set C1 (clock source selection, FLL ext. reference divider, int. reference enable etc.) - PBE mode
    else
      MCG_C1 = ulMCG_C1;       // Set C1 (clock source selection, FLL ext. reference divider, int. reference enable etc.)

    if (((ulMCG_C2 & MCG_C2_EREFS_MASK) != 0x00) && ((ulMCG_C7 & MCG_C7_OSCSEL_MASK) == 0x00)) {
      while((MCG_S & MCG_S_OSCINIT0_MASK) == 0x00) { // Check that the oscillator is running
      }
    }
    // Check that the source of the FLL reference clock is the requested one.
    if ((ulMCG_C1 & MCG_C1_IREFS_MASK) != 0x00) {
      while((MCG_S & MCG_S_IREFST_MASK) == 0x00) {
      }
    } else {
      while((MCG_S & MCG_S_IREFST_MASK) != 0x00) {
      }
    }
        MCG_C4 = (ulMCG_C4 & (uint8_t)(~(MCG_C4_FCTRIM_MASK | MCG_C4_SCFTRIM_MASK))) | (MCG_C4 & (MCG_C4_FCTRIM_MASK | MCG_C4_SCFTRIM_MASK)); // Set C4 (FLL output; trim values not changed)
  }// end MCG_MODE

  // Common for all MCG modes
  // PLL clock can be used to generate clock for some devices regardless of clock generator (MCGOUTCLK) mode.
    MCG_C5 = ulMCG_C5 & (uint8_t)(~MCG_C5_PLLCLKEN0_MASK); // Set C5 (PLL settings, PLL reference divider etc.)
    MCG_C6 = ulMCG_C6 & (uint8_t)~(MCG_C6_PLLS_MASK); // Set C6 (PLL select, VCO divider etc.)
    if (ulMCG_C5 & MCG_C5_PLLCLKEN0_MASK)
    {
    MCG_C5 |= MCG_C5_PLLCLKEN0_MASK;  // PLL clock enable in mode other than PEE or PBE
  }

  // BLPE, PEE and PBE MCG mode specific
  if (mcg_mode == MCG_MODE_BLPE){
    MCG_C2 |= (MCG_C2_LP_MASK);         // Disable FLL and PLL in bypass mode
  }
  else if ((mcg_mode == MCG_MODE_PBE) || (mcg_mode == MCG_MODE_PEE)) {
    MCG_C6 |= (MCG_C6_PLLS_MASK);       // Set C6 (PLL select, VCO divider etc.)
    while((MCG_S & MCG_S_LOCK0_MASK) == 0x00) { // Wait until PLL is locked
    }
        if (mcg_mode == MCG_MODE_PEE)
        {
            MCG_C1 &= (uint8_t)~(MCG_C1_CLKS_MASK);
    }
  }

    if ((mcg_mode == MCG_MODE_FEI) || (mcg_mode == MCG_MODE_FEE))
    {
    while((MCG_S & MCG_S_CLKST_MASK) != 0x00) { // Wait until output of the FLL is selected
    }
    // Use LPTMR to wait for 1ms for FLL clock stabilization
    SIM_SCGC5 |= SIM_SCGC5_LPTMR_MASK;   // Alow software control of LPMTR
    LPTMR0_CMR = LPTMR_CMR_COMPARE(0);   // Default 1 LPO tick
    LPTMR0_CSR = (LPTMR_CSR_TCF_MASK | LPTMR_CSR_TPS(0x00));
    LPTMR0_PSR = (LPTMR_PSR_PCS(0x01) | LPTMR_PSR_PBYP_MASK); // Clock source: LPO, Prescaler bypass enable
    LPTMR0_CSR = LPTMR_CSR_TEN_MASK;     // LPMTR enable
    while((LPTMR0_CSR & LPTMR_CSR_TCF_MASK) == 0x00) {
    }
    LPTMR0_CSR = 0x00;                   // Disable LPTMR
        SIM_SCGC5 &= (uint32_t)~(uint32_t)SIM_SCGC5_LPTMR_MASK;
  }
  else if ((mcg_mode == MCG_MODE_FBI) || (mcg_mode == MCG_MODE_BLPI)) {
    while((MCG_S & MCG_S_CLKST_MASK) != 0x04) { // Wait until internal reference clock is selected as MCG output
    }
  }
  else if ((mcg_mode == MCG_MODE_FBE) || (mcg_mode == MCG_MODE_PBE) || (mcg_mode == MCG_MODE_BLPE)) {
    while((MCG_S & MCG_S_CLKST_MASK) != 0x08) { // Wait until external reference clock is selected as MCG output
    }
  }
  else if (mcg_mode == MCG_MODE_PEE) {
    while((MCG_S & MCG_S_CLKST_MASK) != 0x0C) { // Wait until output of the PLL is selected
    }
  }

  //enable VLPR mode
//  if (((SYSTEM_SMC_PMCTRL_VALUE) & SMC_PMCTRL_RUNM_MASK) == (0x02U << SMC_PMCTRL_RUNM_SHIFT)) {
    //    SMC_PMCTRL = (uint8_t)((SYSTEM_SMC_PMCTRL_VALUE) & (SMC_PMCTRL_RUNM_MASK)); // Enable VLPR mode
//    while(SMC_PMSTAT != 0x04U) {        // Wait until the system is in VLPR mode
//    }
//  }

  // Selects the USB clock divider
    SIM_CLKDIV2 = ((SIM_CLKDIV2) & (uint32_t)(~(SIM_CLKDIV2_USBFRAC_MASK | SIM_CLKDIV2_USBDIV_MASK))) | (ulSIM_CLKDIV2 & (SIM_CLKDIV2_USBFRAC_MASK | SIM_CLKDIV2_USBDIV_MASK));
}
